2003-06-22  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Mercator.h, Mercator/Segment.cpp, Mercator/Segment.h,
	  Mercator/Terrain.cpp, Mercator/Terrain.h: Clean up the
	  way the default segment resolution and size is handled.

	* Mercator/Surface.cpp, Mercator/Surface.h: Framework for
	  class representation texture layers on the terrain.

2003-06-22  Al Riddoch  <alriddoch@zepler.org>

	* Updated copyright statements to include Damien a bit more.

2003-06-22  Damien McGinnes

	* Mercator/Segment.cpp: fixed an error in the clip code (x and y 
	  were switched)
        
2003-06-22  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.h: Make invalidate() private.

	* Mercator/Terrain.cpp, Mercator/Terrain.h: Fix bugs in revised
	  setBasePoint. Remove obsolete methods, and simply to one
	  getSegment call, as two are no longer required. Add destructor.

2003-06-21  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.cpp, Mercator/Segment.h: Store control
	  points in the segment object, so it can be re-populated.

	* Mercator/Terrain.cpp, Mercator/Terrain.h: Manage the creation of
	  new Segment objects when inserting new base points, and handle
	  invalidation at this point too. getSegmentSafe is now deprecated.
	  Untested.

	* tests/main.cpp: Update tests for API change, and clean up output.

2003-06-21  Damien McGinnes

	* Mercator/Terrain.cpp: 
	  - fixed a bug in invalidatePoint (i, j), not (x,y)
	  - removed the erase line in invalidateSegment (mem leak, and loses
	    mods to the segment)
	  - fixed one of the loop limits in refresh

2003-06-20  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Matrix.cpp: Add template instantiations, which I assume
	  was the effect intended by the previous code.

	* Mercator/Terrain.h, Mercator/Terrain.cpp:
	  Re-work segment invalidation code. operator[] should never
	  be used to test for a key in an STL map.

	* Mercator/Segment.cpp, Mercator/Segment.h, Mercator/TerrainMod.h: