@@ -1,3 +1,5 @@
+INCLUDES = -I$(top_srcdir)
+
 lib_LTLIBRARIES = libmercator-0.2.la
 
 libmercator_0_2_la_LDFLAGS = -version-info @MERCATOR_VERSION_INFO@
