@@ -1,3 +1,9 @@
+2003-06-23  Al Riddoch  <alriddoch@zepler.org>
+
+	* Fix Makefile.ams so that distcheck works.
+
+	* tests/main.cpp: Fix tests to work with recent API changes.
+
 2003-06-22  Al Riddoch  <alriddoch@zepler.org>
 
 	* Mercator/Mercator.h, Mercator/Segment.cpp, Mercator/Segment.h,
